--- a/root/index.htm
+++ b/root/index.htm
@@ -1,8 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" class="html">
-  <head runat="server">
+  <head "http://www.w3.org/2005/10/profile">
     <title>sgnn7</title>
-    <link rel="shortcut icon" href="favicon.ico" >
+    <link rel="icon" href="/favicon.ico" >
+    <link rel="shortcut icon" href="/favicon.ico" >
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="all" />
 
     <style type="text/css" media="screen" rel="stylesheet"></style>
