Added Pi to page
Sandra Bullock would be proud

--- a/root/index.htm
+++ b/root/index.htm
@@ -13,5 +13,9 @@
 
   <body class="body" onLoad="new Scroller('textarea')">
     <div id="textarea"></div>
+
+    <div class=footer>
+      <a href=https://www.youtube.com/watch?v=Awf45u6zrP0>&#928;</a>
+    </div>
   </body>
 </html>
