--- a/root/index.htm
+++ b/root/index.htm
@@ -2,8 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" class="html">
   <head "http://www.w3.org/2005/10/profile">
     <title>sgnn7</title>
-    <link rel="icon" href="/favicon.ico" >
-    <link rel="shortcut icon" href="/favicon.ico" >
+    
+    <meta name="robots" content="noodp" />
+    <meta name="description" content="You know why you're here" />
+    
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="all" />
 
     <style type="text/css" media="screen" rel="stylesheet"></style>
